--- a/index.html
+++ b/index.html
@@ -41,54 +41,54 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Esteban Pozo</h2>
-							<p>Coding and engineering<br />
-							Programmer<br />
-							Solutions engineer <a href="http://html5up.net">LINK</a>.</p>
+							<p>Project Portafolio<br />
+							<br />
+							
 							<ul class="actions special">
-								<li><a href="#" class="button primary">MORE</a></li>
+								<!-- <li><a href="#" class="button primary">MORE</a></li>-->
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">See my list of Projects</a>
 					</section>
 
 				<!-- One -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>aaaaa<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>HIGHLIGHTED PROJECTS<br />
+								</h2>
+								<p>This is a complete list of my engineering projects, ranging from areas related to <br />
+								machine design, simulation, construction, machine learning, electronics and programming</p>
 							</header>
-							<ul class="icons major">
+							<!-- <ul class="icons major">
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
 								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
+							</ul>-->
 						</div>
 					</section>
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="https://car-from-uk.com/ebay/carphotos/full/ebay106702.jpg" alt="" /></div><div class="content">
+								<h2>Porsche 505 replica<br /></h2>
+								<p>Design and construction of a Porsche 505 replica using spare parts. Working on the suspension system and <br />
+								structure of the vehicle. </p>
+								</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="https://i.ebayimg.com/images/g/33wAAOSwfXlgUTh9/s-l1600.jpg" alt="" /></div><div class="content">
+								<h2>Karting Vehicle	</h2>
+								<p>Design and construction of a Karting Vehicle using scrap metal and forming the parts by ourselves (welding, <br />
+									heat treating, CAD designing, lathing, etc.)</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXLvpmbmxi0SjiSAAlRRMQ3h84GWXT1hO6ig&usqp=CAU" alt="" /></div><div class="content">
+								<h2>Wind Turbine Design</h2>
+								<p>Design for manufacturing of wind turbines. Patent application of wind turbine assembly concept for single <br />
+									 blade installation. Carried out in Beijing R+D center.</p>
 							</div>
 						</section>
 					</section>
@@ -97,34 +97,35 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Experience in Germany</h2>
+								<p>My experience in Germany is related to the automotive branch <br />
+								as well as the automation and manufacturing aspects of production.</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Mercedes Benz headlight production</h3>
+									<p>Production of the Mercedes Benz S-Class headlights in Automotive Lighting Bortterode, Germany. </p>
 								</li>
 								<li class="icon solid fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Automation</h3>
+									<p>Device integration and PLC programming using TwinCAT and Beckhoff PLCs. Integration of Smartlights, transponder keys<br />
+									working with Pyads, Python and Flask. </p>
 								</li>
 								<li class="icon solid fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Robotics</h3>
+									<p>Robotic programming for KUKA and ABB robots using Workvisual and Robotstudio. Robotic vision tasks using KEYENCE cameras for pattern recognition</p>
 								</li>
 								<li class="icon solid fa-headphones-alt">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Construction</h3>
+									<p>Construction of a Beadbox for agarose bead production in Jena, Germany</p>
 								</li>
 								<li class="icon fa-heart">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Deep Learning for robotics</h3>
+									<p>Using LSTM architectures to train neural networks to enable the recognition of sets of instructions in collaborative robotics</p>
 								</li>
 								<li class="icon fa-flag">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>CMMS design</h3>
+									<p>Design of a Computer Management Maintenance System to improve the maintenance metrics.</p>
 								</li>
 							</ul>
 						</div>
