--- a/generic.html
+++ b/generic.html
@@ -18,8 +18,8 @@
 			<div id="page-wrapper">
 
 				<!-- Header -->
-					<header id="header">
-						<h1><a href="index.html">Spectral</a></h1>
+					<header id="header" class="alt">
+						<h1><a href="index.html">Esteban</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -27,17 +27,17 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="generic.html">Machine Learning</a></li>
+											<li><a href="elements.html">Development</a></li>
+											<!-- <li><a href="#">Sign Up</a></li>
+											<li><a href="#">Log In</a></li>  -->
 										</ul>
 									</div>
 								</li>
 							</ul>
 						</nav>
 					</header>
-
+				
 				<!-- Main -->
 					<article id="main">
 						<header>
