--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>CTA -->
+							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li> 
+					 -->
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Esteban Pozo</li><li> 2022</li>
