--- a/elements.html
+++ b/elements.html
@@ -66,18 +66,20 @@
 					</article>
 
 				<!-- 
+					<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul> Footer -->
-						<ul class="copyright">
-							<li>&copy; Esteban Pozo</li><li> 2022 </li>
+							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li> 
+					 
 						</ul>
-					</footer> 
+						<ul class="copyright">
+							<li>&copy; Esteban Pozo</li><li> 2022</li>
+						</ul>
+					</footer>
 
 			</div>
 
