--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
 									DataPrep and Data Studio).</p>
 							</div>
 						</section>
+						<section class="spotlight">
+							<div class="image"><img src="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*RUClnV9lgFpz6KAaCMYdPA.png" alt="" /></div><div class="content">
+								<h2>DRAW</h2>
+								<p>Generative Art Sample.</p>
+							</div>
+						</section>
+						
 					</section>
 
 				<!-- Three -->
