--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 											<li><a href="generic.html">Machine Learning</a></li>
 											<li><a href="elements.html">Development</a></li>
 											<li><a href="fRONTEND.html">FrontEnd</a></li>
-											<li><a href="component.html">FrontEnd</a></li>
+											<li><a href="component.html">Portfolio WIP</a></li>
 											<!-- <li><a href="#">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>  -->
 										</ul>
