--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Esteban</a></h1>
+						<h1><a href="index.html">Esteban Pozo - Project Portfolio</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -44,7 +44,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Esteban Pozo</h2>
-							<p>Project Portafolio<br />
+							<p>Project Portfolio<br />
 							<br />
 							
 							<ul class="actions special">
